# demo-python-flask-app

./: README.md  pyproject.toml
src/: app.py  config.py  models.py  pokemon.db  pokemon.py  swagger.yml
src/templates/: index.html
