[tool.poetry]
name = "pokedex-flask"
version = "0.1.0"
description = "An API for Pokemon"
authors = ["Bryan Borgeson <bryborge@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.2"
connexion = {extras = ["swagger-ui"], version = "2.14.2"}
flask-marshmallow = {extras = ["sqlalchemy"], version = "^0.15.0"}

[tool.poetry.group.dev.dependencies]
swagger-ui = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
